--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1E88E5</color>
-    <color name="colorAccent">#FF0000</color>
+    <color name="colorPrimary">#722671</color>
+    <color name="colorPrimaryDark">#632168</color>
+    <color name="colorAccent">#3c3c3c</color>
     <color name="darkerGrey">#424242</color>
     <color name="txt_color">#26282a</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="tab_txt_color">#828282</color>
+    <color name="lightBackground">#D5D3D3</color>
 </resources>
